Update for inline-install

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,700,900' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/bdiljnnmjlmkamjhkoiipobjppifalkj">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     </head>
     <body>
@@ -25,11 +26,11 @@
         		<div class="content">
         			<h1>Weekly Series</h1>
         			<h3>your TV Shows schedule right in your browser</h3>
-        			<a href="" class="cta">
+        			<button class="cta" onclick="chrome.webstore.install()">
         				<i class="fa fa-plus-circle"></i>
         				<span>I want it know</span>
         				<span class="small">v 1.1.1</span>
-        			</a>
+        			</button>
         		</div>
         	</div>
         </div>
