--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Weekly Series</title>
         <meta name="description" content="Weekly Series, your TV Shows schedule right in your browser">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href="img/icon128.png" />
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,700,900' rel='stylesheet' type='text/css'>
