--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         			<h3>your TV Shows schedule right in your browser</h3>
         			<a class="cta" href="https://chrome.google.com/webstore/detail/weekly-series/bdiljnnmjlmkamjhkoiipobjppifalkj" onclick="chrome.webstore.install()" target="_blank">
         				<i class="fa fa-plus-circle"></i>
-        				<span>I want it know</span>
+        				<span>I want it now</span>
         				<span class="small">v 1.1.1</span>
         			</a>
         		</div>
